--- a/src/cfg/config.cfg
+++ b/src/cfg/config.cfg
@@ -1,3 +1,6 @@
 # This file contains CML-Bench network addresses
 # Do not edit key names
 Backend address: http://192.168.125.100
+Database: D:\Documents\Programming\Python\CML\SubModels\Paths.xlsx
+Local storage: D:\Documents\Programming\Python\CML\SubModels\Storage
+Server storage: 683984
