Added workflow graph. Implemented changes in some entities methods

--- a/src/cfg/config.cfg
+++ b/src/cfg/config.cfg
@@ -2,5 +2,6 @@
 # Do not edit key names
 Backend address: http://192.168.125.100
 Database: D:\Documents\Programming\Python\CML\SubModels\Paths.xlsx
+JSON: D:\Documents\Programming\Python\CML\SubModels\LCs.json
 Local storage: D:\Documents\Programming\Python\CML\SubModels\Storage
-Server storage: 683984
+Server storage: 699039
