Add healthcheck. Run on Ubuntu

--- a/src/cfg/config.cfg
+++ b/src/cfg/config.cfg
@@ -1,5 +1,5 @@
 # This file contains CML-Bench network addresses
 # Do not edit key names
 Backend address: http://192.168.125.100
-Local storage: D:\Documents\Programming\Python\CML\SubModels\Storage
+Local storage: /home/dmitry/work/cml/projects/cml-sinara-bench-info/Storage
 Server storage: 699039
